refactoring, bag fixes

--- a/client/containers/App.scss
+++ b/client/containers/App.scss
@@ -26,17 +26,10 @@ body {
   top: 0;
 }
 
-.Nav_Bar_Search{
+.nav_bar_search_input{
   min-width: 350px;
 }
 
 .search_bar_icon{
   height: 65% !important;
 }
-
-.test {
-
-}
-
-
-
